# sber

./: .gitignore  AGENTS.md  PROJECT_OVERVIEW.md  README.md  knowledge_bench_private_scores.csv  pyproject.toml
.codex/: config.toml
.codex/agents/: demo-agent.md  eval-agent.md  feature-agent.md  latency-agent.md  research-agent.md
artifacts/: final_feature_selection_summary.json  token_uncertainty_group_compare.json
artifacts/distilgpt2_boundary_fix/: run_summary.json
artifacts/distilgpt2_end_to_end/: run_summary.json
artifacts/eval_real_provider/: eval_real_provider_summary.json
artifacts/latency/: latency_benchmark.json
configs/: frozen_submission.json  token_stat_provider.json  token_stat_provider.local.json
data/: public_seed_facts.jsonl
docs/: DATA_SPLIT_AND_LEAKAGE_POLICY.md  DEFENSE_TALK_TRACK.md  KAGGLE_VALIDATION.md  REPRODUCIBILITY.md  SOLUTION_CARD.md
scripts/: benchmark_latency.py  build_text_training_dataset.py  clean_triviaqa_jsonl.py  generate_triviaqa_responses.py  install.sh  label_triviaqa_generated_responses.py  preprocess_text_training_dataset.py  run_ablation.py  run_ablation_real_provider.py  run_error_analysis_real_provider.py  run_eval_real_provider.py  run_internal_probe_compare_real_provider.py  run_latency_real_provider.py  run_non_public_recovery_public_eval.py  run_public_benchmark_ablation.py  run_public_benchmark_eval.py  run_smoke_provider.py  score_frozen_submission.py  score_private.sh  score_private_dataset.py  train.sh  train_frozen_submission.py  train_text_detector.py
src/data/: non_public_supervision.py  (+4 more)
(+106 files in other folders)
