[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sber"
version = "0.1.0"
description = "Scaffold for feature development, evaluation, and demo workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "lightgbm>=4.6.0",
  "torch>=2.2",
  "transformers>=4.45.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
